<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/rel_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_10"
            android:weightSum="1"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_alignParentTop="true">
            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_weight=".8"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextbox"
                android:ems="10"
                android:hint="@string/et_hint_type"
                style="@style/Widget.Conversations.EditText"
                android:imeOptions="flagNoExtractUi|actionSend"
                android:inputType="textShortMessage|textMultiLine|textCapSentences"
                android:paddingBottom="@dimen/view_12"
                android:paddingLeft="@dimen/view_8"
                android:paddingRight="@dimen/view_8"
                android:layout_marginRight="@dimen/view_10"
                android:layout_marginLeft="@dimen/view_10"
                android:paddingTop="@dimen/view_12">
                <requestFocus/>
            </EditText>
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_go"
            android:layout_width="@dimen/view_55"
            android:layout_height="@dimen/view_35"
            android:layout_marginLeft="@dimen/view_10"
            android:layout_marginRight="@dimen/view_10"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/view_15"
            android:text="@string/go"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18"
            android:layout_alignParentRight="true" />
        <WebView
            android:layout_below="@+id/rel_search_box"
            android:id="@+id/main_web_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_10"
            android:layout_marginBottom="@dimen/view_10" />
        <ProgressBar
            android:id="@+id/main_progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lin_bottom_item"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_56"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_arrow_back_white_24dp"
            android:text="@string/back"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_bookmark_white_24dp"
            android:text="@string/bookmark"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_fwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_arrow_forward_white_24dp"
            android:text="@string/forward"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>